# konvert

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_ja.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: supported-formats.md
examples/: basic_usage.md  sample.json  sample.yaml
src/konvert/: __init__.py  cli.py  converter.py  detector.py
src/konvert/formats/: __init__.py  base.py  csv_fmt.py  env_fmt.py  ini_fmt.py  json_fmt.py  toml_fmt.py  xml_fmt.py  yaml_fmt.py
tests/: conftest.py  test_cli.py  test_converter.py  test_detector.py
tests/formats/: test_csv.py  test_env.py  test_ini.py  test_json.py  test_toml.py  test_xml.py  test_yaml.py
